fix: katex overflow

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -66,6 +66,10 @@ main {
     overflow-x: auto;
     overflow-y: hidden;
   }
+  .katex {
+    overflow-x: auto;
+    overflow-y: hidden;
+  }
   .post {
     margin: 50px 0;
     img {
